src/objects/Academic_Record__c.object
<CustomObject>
    <description>Stores academic information related to a Contact.</description>
    <fields>
        <fullName>Admission_Date__c</fullName>
        <label>Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Contact-Account relationship this academic information is related to.</description>
        <inlineHelpText>The Contact-Account relationship this academic information is related to.</inlineHelpText>
        <label>Affiliation</label>
        <referenceTo>Affiliation__c</referenceTo>
        <relationshipName>Academics</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class_Standing__c</fullName>
        <label>Class Standing</label>
        <picklist>
            <picklistValues>
                <fullName>Freshman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sophomore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Contact.</description>
        <inlineHelpText>The parent Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Academic Records</relationshipLabel>
        <relationshipName>Academic_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credits_Attempted__c</fullName>
        <label>Credits Attempted</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credits_Earned__c</fullName>
        <label>Credits Earned</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_to_Enroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible to Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FERPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FERPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Aid Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <label>GPA</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HIPPA_Detail__c</fullName>
        <label>HIPPA Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HIPPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HIPPA</label>
        <type>Checkbox</type>
    </fields>
    <label>Academic Record</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Academic Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academic Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>